language/move-lang/tests/move_check/expansion/use_struct_tparam_shadows.exp
error[E04007]: incompatible types
   ┌─ tests/move_check/expansion/use_struct_tparam_shadows.move:12:9
   │
11 │     fun foo<S>(x: S): 0x2::X::S {
   │                   -   --------- Expected: '0x2::X::S'
   │                   │    
   │                   Given: 'S'
12 │         x
   │         ^ Invalid return expression

